@@ -1,6 +1,7 @@
 2008-07-01  Martin Lambers <marlam@marlam.de>
 
 	* gllib/glvm.h: Add cbrt() functions.
+	* gllib/glvm-color.h: Add CIE L*a*b* color space.
 
 2008-06-30  Martin Lambers <marlam@marlam.de>
 
